# loresmith

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.html  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: Home.py  bootstrap.py
app/components/: layout.py
app/db/: connection.py  migrations.py  schema.py
app/pages/: 01_NPCs.py  02_Factions.py  03_Sessions.py  04_Relationships.py  05_Locations.py
app/utils/: seed_data.py
docs/: agile_artifacts.html  agile_artifacts.md  data_model_v1.html  data_model_v1.md  sprint_1_plan.html  sprint_1_plan.md  sprint_1_retro.html  sprint_1_retro.md  sprint_2_plan.md
