[project]
name = "loresmith"
version = "0.1.0"
description = "Campaign management for tabletop RPG Dungeon Masters"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
]

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I", "UP"]
ignore = []

# Streamlit entrypoints must import bootstrap first (even before third-party
# imports like streamlit) to ensure sys.path is set correctly for multipage execution.
# This violates standard isort ordering, so we disable I001 (import-block unsorted)
# for these files.
[tool.ruff.lint.per-file-ignores]
"app/Home.py" = ["I001"]
"app/pages/*.py" = ["I001"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
force-to-top = ["bootstrap"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true